create layout of search area in NCPackageSelector, don't use returnOnReturn() but notiy() for search field
Conflicts:
	VERSION

--- a/libyui-ncurses-pkg/ChangeLog
+++ b/libyui-ncurses-pkg/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Tue Jun 19 10:05:44 CEST 2012 - gs@suse.de
+
+- Fixed crash while starting the package selector (bnc #767619)
+- 2.22.7 
+
+-------------------------------------------------------------------
 Tue May  8 14:29:44 CEST 2012 - gs@suse.de
 
 - Bug-fix for typo in help text (bnc #759100)
