changelog and version

--- a/libyui/ChangeLog
+++ b/libyui/ChangeLog
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------
+Fri Sep  7 13:48:44 CEST 2012 - tgoettlicher@suse.de
+
+- Version 2.42.2
+
+-------------------------------------------------------------------
 Tue Sep  4 14:33:29 CEST 2012 - tgoettlicher@suse.de
 
 - Fixed requirements in doc spec file
