--- a/libyui-ncurses/ChangeLog
+++ b/libyui-ncurses/ChangeLog
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------
+Fri Sep  7 13:50:36 CEST 2012 - tgoettlicher@suse.de
+
+- V 2.42.2
+
+-------------------------------------------------------------------
 Tue Sep  4 14:36:17 CEST 2012 - tgoettlicher@suse.de
 
 - Fixed requirements in doc spec file
