--- a/libyui-qt-graph/ChangeLog
+++ b/libyui-qt-graph/ChangeLog
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------
+Fri Sep  7 13:54:02 CEST 2012 - tgoettlicher@suse.de
+
+- Version 2.42.2
+
+-------------------------------------------------------------------
 Tue Apr 10 17:19:04 CEST 2012 - aschnell@suse.de
 
 - changed license to GPL-2.0
