--- a/libyui-qt-pkg/ChangeLog
+++ b/libyui-qt-pkg/ChangeLog
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------
+Fri Sep  7 13:57:58 CEST 2012 - tgoettlicher@suse.de
+
+- Version 2.42.2
+
+-------------------------------------------------------------------
 Tue Sep  4 14:38:32 CEST 2012 - tgoettlicher@suse.de
 
 - Fixed requirements in doc spec file
