NCTablePad: bug-fix for sorting of tables (correct return of Compare)

--- a/libyui-ncurses/ChangeLog
+++ b/libyui-ncurses/ChangeLog
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------
+Wed Sep 19 11:55:00 CEST 2012 - gs@suse.de
+
+- NCTablePad: bug-fix for sorting of tables 
+
+-------------------------------------------------------------------
 Fri Sep  7 13:50:36 CEST 2012 - tgoettlicher@suse.de
 
 - V 2.42.2
