--- a/libyui/ChangeLog
+++ b/libyui/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Fri Nov  2 15:03:47 CET 2012 - anaselli@linux.it
+
+- Added new API to managed application title and icon
+- Added the availiability to build a git sha1 versioned package using cmake -DGIT_VERSION=on
+
+-------------------------------------------------------------------
 Fri Sep  7 13:48:44 CEST 2012 - tgoettlicher@suse.de
 
 - Version 2.42.2
