--- a/libyui-ncurses/ChangeLog
+++ b/libyui-ncurses/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Fri Nov  2 18:11:49 CET 2012 - anaselli@linux.it
+
+-  NCApplication: Reimplemented setApplicationTitle from YApplication
+-  Added the availiability to build a git sha1 versioned package using cmake -DGIT_VERSION=on
+
+-------------------------------------------------------------------
 Thu Oct 18 11:07:50 CEST 2012 - gs@suse.de
 
 - NCCheckBoxFrame: respect option `noAutoEnable, bug-fix for 
