--- a/libyui-ncurses-pkg/ChangeLog
+++ b/libyui-ncurses-pkg/ChangeLog
@@ -1,7 +1,8 @@
 -------------------------------------------------------------------
 Wed Dec 12 11:05:08 CET 2012 - gs@suse.de
 
-- Improve help text for recommended packages
+- Improve help text for recommended packages, fix typos
+- V 2.43.2
 
 -------------------------------------------------------------------
 Wed Oct 24 16:55:45 CEST 2012 - gs@suse.de
