wrong path for Libyui_config.h

--- a/libyui/ChangeLog
+++ b/libyui/ChangeLog
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------
+Sat Jan 19 23:55:33 CET 2013 - anaselli@linux.it
+
+- wrong path for Libyui_config.h
+
+-------------------------------------------------------------------
 Fri Jan 18 14:51:40 CET 2013 - anaselli@linux.it
 
 - Fixed YSettings
