--- a/libyui-ncurses-pkg/ChangeLog
+++ b/libyui-ncurses-pkg/ChangeLog
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------
+Thu Feb 21 09:44:08 CET 2013 - gs@suse.de
+- Show patch descriptions correctly (bnc #803466)
+- V 2.43.4
+
+-------------------------------------------------------------------
 Tue Jan 22 11:43:43 CET 2013 - gs@suse.de
 
 - Bug-fix for package search (concerning package summary) 
