--- a/libyui/ChangeLog
+++ b/libyui/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Tue Apr 30 09:21:48 CEST 2013 - tgoettlicher@suse.de
+
+- Increased version because of changed function names
+- Version 3.0.0
+
+-------------------------------------------------------------------
 Fri Feb  8 15:22:03 CET 2013 - tgoettlicher@suse.de
 
 - Code clean-up: removed java-like get-prefix
