--- a/libyui-ncurses/ChangeLog
+++ b/libyui-ncurses/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Mon May  6 10:08:01 CEST 2013 - tgoettlicher@suse.de
+
+- fixed so version
+- V 2.43.5
+
+-------------------------------------------------------------------
 Tue Mar 26 14:39:09 CET 2013 - gs@suse.de
 
 - NCCheckBoxFrame:  handle option `invertAutoEnable correctly,
