--- a/libyui-qt-pkg/ChangeLog
+++ b/libyui-qt-pkg/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Mon May  6 10:10:08 CEST 2013 - tgoettlicher@suse.de
+
+- Fixed so version
+- Version 2.42.6
+
+-------------------------------------------------------------------
 Thu Jan 17 14:34:22 CET 2013 - tgoettlicher@suse.de
 
 - Fixed endcoding of entries in package history (bnc #775608)  
