--- a/libyui-ncurses/ChangeLog
+++ b/libyui-ncurses/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Mon May  6 13:30:00 UTC 2013 - bjoern.esser@gmail.com
+
+- fix build issues
+- V 2.43.8
+
+-------------------------------------------------------------------
 Mon May  6 11:38:32 UTC 2013 - bjoern.esser@gmail.com
 
 - use SONAME from libyui instead of VERSION.cmake
