fix build issues

--- a/libyui-qt-graph/ChangeLog
+++ b/libyui-qt-graph/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Mon May  6 13:40:00 UTC 2013 - bjoern.esser@gmail.com
+
+- fix build issues
+- Version 2.42.4
+
+-------------------------------------------------------------------
 Mon May  6 11:55:29 UTC 2013 - bjoern.esser@gmail.com
 
 - Version 2.42.3
