new Version 3.0.4 use a common toplevel CMakeLists.txt fix building *-doc pkgs SET_GITVERSION should be inside LibyuiCommon.cmake

--- a/libyui/ChangeLog
+++ b/libyui/ChangeLog
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------
+Fri May 10 10:40:00 UTC 2013 - bjoern.esser@gmail.com
+
+- use a common toplevel CMakeLists.txt
+- fix building *-doc pkgs
+- Version 3.0.4
+
+-------------------------------------------------------------------
 Mon May  6 13:30:00 UTC 2013 - bjoern.esser@gmail.com
 
 - fix build issues with ncurses and qt
