--- a/libyui-ncurses-pkg/ChangeLog
+++ b/libyui-ncurses-pkg/ChangeLog
@@ -1,4 +1,12 @@
 -------------------------------------------------------------------
+Fri May 10 10:40:00 UTC 2013 - bjoern.esser@gmail.com
+
+- use a common toplevel CMakeLists.txt
+- fix building *-doc pkgs
+- introduce bootstrap.sh
+- Version 2.43.6
+
+-------------------------------------------------------------------
 Tue May  7 13:11:05 CEST 2013 - gs@suse.de
 
 - Cast return of setCandidate() to bool (due to libzypp changes)
