fix build with graphviz >= 2.30.0 new Version 3.0.6

--- a/libyui/ChangeLog
+++ b/libyui/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Sat Jun 01 08:00:00 UTC 2013 - bjoern.esser@gmail.com
+
+- fix build with graphviz >= 2.30.0
+- Version 3.0.6
+
+-------------------------------------------------------------------
 Wed May 15 15:05:00 UTC 2013 - bjoern.esser@gmail.com
 
 - respect compiler flags of system rpm config when building RELEASE
