--- a/libyui-ncurses/ChangeLog
+++ b/libyui-ncurses/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Tue May 28 14:40:21 CEST 2013 - gs@suse.de
+
+- NCCheckBoxFrame:  handle option `invertAutoEnable correctly,
+  (bug-fix for authentication problem in iscsi-client bnc #805407)
+
+-------------------------------------------------------------------
 Thu Feb 21 09:32:10 CET 2013 - gs@suse.de
 
 - NCRichText: bug-fix for text in <pre> tags, patch description is
