--- a/libyui/ChangeLog
+++ b/libyui/ChangeLog
@@ -1,4 +1,12 @@
 -------------------------------------------------------------------
+Mon Jun 24 16:17:06 CEST 2013 - anaselli@linux.it
+
+- fixed the use of -DGIT_VERSION=on
+- fixed ManyWidget example using handleChildrenEnablement as 
+  requested into YCheckBoxFrame documentation to establish the 
+  initial enabled or disabled state of the child widgets
+
+-------------------------------------------------------------------
 Sat Jun 01 08:00:00 UTC 2013 - bjoern.esser@gmail.com
 
 - fix build with graphviz >= 2.30.0
