--- a/libyui/ChangeLog
+++ b/libyui/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Wed Jun 26 16:20:29 CEST 2013 - tgoettlicher@suse.de
+
+- Fixed build of libyui-qt-graph examples
+- Version 3.0.8
+
+-------------------------------------------------------------------
 Mon Jun 24 16:17:06 CEST 2013 - anaselli@linux.it
 
 - fixed the use of -DGIT_VERSION=on
