--- a/libyui-ncurses-pkg/ChangeLog
+++ b/libyui-ncurses-pkg/ChangeLog
@@ -1,7 +1,8 @@
 -------------------------------------------------------------------
 Thu Jun 27 12:13:36 CEST 2013 - gs@suse.de
 
-- Show and handle multi version packages correctly
+- Show and handle multiple versions of packages correctly 
+  (bnc #822962)
 - Version 2.44.0
 
 -------------------------------------------------------------------
