--- a/libyui-ncurses-pkg/ChangeLog
+++ b/libyui-ncurses-pkg/ChangeLog
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------
+Thu Jul 11 14:06:27 CEST 2013 - gs@suse.de
+
+- Online Update: show irrelevant patches only in list 'All Patches',
+  improve handling of the patch status, enhance help text
+- Version 2.44.2
+
+-------------------------------------------------------------------
 Wed Jul  3 14:18:13 CEST 2013 - gs@suse.de
 
 - remove webpin search from configuration menu (bnc#821866),
