--- a/libyui-ncurses-pkg/ChangeLog
+++ b/libyui-ncurses-pkg/ChangeLog
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------
+Thu Jul 18 12:33:24 CEST 2013 - gs@suse.de
+
+- Improve help for Online Update, show column 'Kind' beside 'Name'
+
+-------------------------------------------------------------------
 Thu Jul 11 14:06:27 CEST 2013 - gs@suse.de
 
 - Online Update: show irrelevant patches only in list 'All Patches',
