--- a/libyui-ncurses-pkg/ChangeLog
+++ b/libyui-ncurses-pkg/ChangeLog
@@ -1,7 +1,10 @@
 -------------------------------------------------------------------
-Thu Jul 18 12:33:24 CEST 2013 - gs@suse.de
+Tue Jul 24 11:56:24 CEST 2013 - gs@suse.de
 
-- Improve help for Online Update, show column 'Kind' beside 'Name'
+- Online Update: improve help, show column 'Kind' beside 'Name',
+  Package Selector: get lists of orphaned, suggested, recommended
+  and unneeded packages correctly
+- Version 2.44.3
 
 -------------------------------------------------------------------
 Thu Jul 11 14:06:27 CEST 2013 - gs@suse.de
