--- a/libyui-qt-pkg/ChangeLog
+++ b/libyui-qt-pkg/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Fri Aug  2 15:08:35 CEST 2013 - tgoettlicher@suse.de
+
+- bnc#831758: fix symbol icons
+- Version 2.42.13
+
+-------------------------------------------------------------------
 Tue Jul 30 13:10:44 CEST 2013 - tgoettlicher@suse.de
 
 - check pick list and installed obj for package classification
