--- a/libyui/ChangeLog
+++ b/libyui/ChangeLog
@@ -1,3 +1,9 @@
+Fri Nov 29 00:09:04 CET 2013 - anaselli@linux.it
+
+- added external widget plugin management
+- added support for multi plugin loader (one per name)
+- Version 3.0.11
+
 -------------------------------------------------------------------
 Tue Aug  6 14:30:53 CEST 2013 - tgoettlicher@suse.de
 
