documented recently merged changes; bumped so version accordingly
the ABI changes incompatibly because YPushButton::setRelNotesButton
is added to the middle of the vtable :-/

--- a/libyui/ChangeLog
+++ b/libyui/ChangeLog
@@ -1,8 +1,18 @@
 -------------------------------------------------------------------
+Thu Dec  5 13:19:10 UTC 2013 - mvidner@suse.com
+
+- Added a new option for YPushButton: YUIOpt_relNotesButton;
+  it will pop up a dialog with externally provided release notes.
+  (by jsrain)
+- Added a generic plugin loader libyui-NAME-[qt|gtk|ncurses]
+  to manage user defined external widget (by anaselli)
+- 3.0.11
+
+-------------------------------------------------------------------
 Tue Aug  6 14:30:53 CEST 2013 - tgoettlicher@suse.de
 
 - Fixed dependencies
-- Version 3.0.9
+- Version 3.0.10
 
 -------------------------------------------------------------------
 Wed Jul 24 14:59:07 CEST 2013 - tgoettlicher@suse.de
