--- a/libyui-ncurses/ChangeLog
+++ b/libyui-ncurses/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Thu Dec  5 16:36:33 UTC 2013 - mvidner@suse.com
+
+- adjusted to libyui so version 6
+- 2.46.0
+
+-------------------------------------------------------------------
 Wed Nov 20 12:55:34 CET 2013 - gs@suse.de
 
 - Add 'Requires: glibc-locale' to spec-file (bnc #849255)
