--- a/libyui-qt-pkg/ChangeLog
+++ b/libyui-qt-pkg/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Tue Jan  7 12:50:04 UTC 2014 - mvidner@suse.com
+
+- Ported to Qt5
+- 2.43.0
+
+-------------------------------------------------------------------
 Fri Aug  2 15:08:35 CEST 2013 - tgoettlicher@suse.de
 
 - bnc#831758: fix symbol icons
