--- a/libyui-qt-graph/ChangeLog
+++ b/libyui-qt-graph/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Tue Jan  7 12:50:04 UTC 2014 - mvidner@suse.com
+
+- Ported to Qt5
+- 2.43.0
+
+-------------------------------------------------------------------
 Wed Jun 26 16:15:19 CEST 2013 - tgoettlicher@suse.de
 
 - fixed libgvc dependency (bnc #825751)
