--- a/libyui-qt-graph/ChangeLog
+++ b/libyui-qt-graph/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Wed Jan  8 13:34:40 CET 2014 - mvidner@suse.com
+
+- adjusted to libyui so version 6
+- 2.43.0
+
+-------------------------------------------------------------------
 Fri Sep 27 08:57:27 UTC 2013 - coolo@suse.com
 
 - supplement libyui-qt (bnc#793893)
