--- a/libyui-ncurses-pkg/ChangeLog
+++ b/libyui-ncurses-pkg/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Wed Jan  8 22:06:52 CET 2014 - mvidner@suse.com
+
+- adjusted to libyui so version 6
+- 2.46.0
+
+-------------------------------------------------------------------
 Wed Nov 20 13:04:31 CET 2013 - gs@suse.de
 
 - Fixed typos in help text, rephrase text (bnc #839689)
