--- a/libyui-ncurses/ChangeLog
+++ b/libyui-ncurses/ChangeLog
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------
+Sun Jan 19 11:41:07 CET 2014 - anaselli@linux.it
+
+- Fixed YTree item selection during items population,
+  old implementation ignored selected items.
+  - 2.46.1
+
+-------------------------------------------------------------------
 Thu Dec  5 16:36:33 UTC 2013 - mvidner@suse.com
 
 - adjusted to libyui so version 6
