--- a/libyui-ncurses/ChangeLog
+++ b/libyui-ncurses/ChangeLog
@@ -1,6 +1,8 @@
 -------------------------------------------------------------------
 Sun Jan 19 11:41:07 CET 2014 - anaselli@linux.it
 
+- NCInputField did not manage ctrl-h (08) and del (0x7f) to delete
+  input
 - Fixed YTree item selection during items population,
   old implementation ignored selected items.
   - 2.46.1
