--- a/libyui-qt-pkg/ChangeLog
+++ b/libyui-qt-pkg/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Thu Feb 13 13:49:04 UTC 2014 - mvidner@suse.com
+
+- Removed hard-coded background color for pattern headline.
+- 2.43.1
+
+-------------------------------------------------------------------
 Wed Jan  8 22:06:52 CET 2014 - mvidner@suse.com
 
 - adjusted to libyui so version 6
