--- a/libyui-ncurses/ChangeLog
+++ b/libyui-ncurses/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Fri Feb 28 12:35:39 CET 2014 - gs@suse.de
+
+- fixed segfault in tree widget (bnc #866145)
+- 2.46.3
+
+-------------------------------------------------------------------
 Wed Jan 29 15:08:55 CET 2014 - gs@suse.de
 
 - code cleanup concerning text domain
